tests/cases/parser/types/incomplete_ty_params.stderr
error: unexpectedly encountered a `(...)`
 --> $DIR/incomplete_ty_params.hash:4:20
2 |    
3 |    {
4 |        T := struct<U, (
  |  _____________________-
5 | |          beep: T,
6 | |      )
  | |______- 
7 |    }
8 |    
  = help: expected either `identifier`, or `>`

error: expected struct definition entries here which begin with a `<` or `(`, however received the identifier `U`
  --> $DIR/incomplete_ty_params.hash:10:17
 9 |   {
10 |       T := struct U,> (
   |                   ^ 
11 |           beep: T,
   = help: expected a `(`

error: unexpectedly encountered a `,`
  --> $DIR/incomplete_ty_params.hash:16:16
15 |   {
16 |       T := enum <,> (
   |                  ^ 
17 |           beep: T,
   = help: expected either `identifier`, or `>`

error: unexpectedly encountered a `{...}`
  --> $DIR/incomplete_ty_params.hash:28:16
26 |    
27 |    {
28 |        T := mod < { // missing `>`
   |  _________________-
29 | |          mux := () -> char => 'a';
30 | |      }
   | |______- 
31 |    }
   = help: expected either `identifier`, or `>`

warn: useless type parameters on this `mod` block
  --> $DIR/incomplete_ty_params.hash:22:14
21 |   {
22 |       T := mod <> {
   |                ^^ remove this `<>`
23 |           mux := () -> char => 'a';
