tests/cases/parser/types/incomplete_ty_params.hash
// run=fail, stage=parse

{
    T := struct<U, (
        beep: T,
    )
}

{
    T := struct U,> (
        beep: T,
    )
}

{
    T := enum <,> (
        beep: T,
    )
}

{
    T := mod <> {
        mux: () -> char;
    }
}

{
    T := mod < { // missing `>`
        mux: () -> char;
    }
}
